# daemon-v1

./: .gitignore  API.md  Cargo.toml  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TUTORIAL.md  build.bat  config.example.toml
docs/: API-Controller.md  API-Module.md  Scenario-Controller.md  Scenario-Module.md  dev-guide.md  protocol-reference.md
examples/: controller_example.py  echo_module.py  echo_module.rs
src/: error.rs  lib.rs  main.rs
src/bus/: mod.rs  processor.rs  router.rs  subscriber.rs  types.rs
src/config/: daemon.rs
src/controller/: handler.rs  mod.rs  server.rs
src/module/: manager.rs  mod.rs  process.rs  registry.rs
src/protocol/: codec.rs  controller.rs  mod.rs  module.rs
src/storage/: cache.rs  mod.rs  sieve.rs  types.rs
tests/: integration_test.rs
