[package]
name = "daemon_v1"
version = "1.0.9"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3"

# Serialization
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0.7"
anyhow = "1.0.94"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Pattern matching
glob = "0.3"
regex = "1.11"

# Utilities
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = "0.4"
toml = "0.8"
bytes = "1.11"

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
